petite correction mobile affichage

--- a/src/styles/_locationList.scss
+++ b/src/styles/_locationList.scss
@@ -56,12 +56,12 @@
 
     .locationCard {
         width: 100%;
-        height: 225px;
+        height: auto;
         margin: 17px 0;
     }
 
     .locationImg {
         width: 100%;
-        height: 180px;
+        height: 240px;
     }
 }
