--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -158,12 +158,12 @@ body {
   }
   .locationCard {
     width: 100%;
-    height: 225px;
+    height: auto;
     margin: 17px 0;
   }
   .locationImg {
     width: 100%;
-    height: 180px;
+    height: 240px;
   }
 }
 .collapsible__container {
